[logging] Better progress bars (for project + for file)

--- a/data-investigation/eda.ipynb
+++ b/data-investigation/eda.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<slither.core.declarations.contract.Contract object at 0x296028460>, <slither.core.declarations.contract.Contract object at 0x2960284c0>, <slither.core.declarations.contract.Contract object at 0x296028550>, <slither.core.declarations.contract.Contract object at 0x296028640>, <slither.core.declarations.contract.Contract object at 0x296028880>, <slither.core.declarations.contract.Contract object at 0x296029f60>, <slither.core.declarations.contract.Contract object at 0x296029ff0>, <slither.core.declarations.contract.Contract object at 0x29602a080>, <slither.core.declarations.contract.Contract object at 0x29602a110>, <slither.core.declarations.contract.Contract object at 0x29602a1a0>]\n"
+      "[<slither.core.declarations.contract.Contract object at 0x177aff430>, <slither.core.declarations.contract.Contract object at 0x296aea620>, <slither.core.declarations.contract.Contract object at 0x296aea4d0>, <slither.core.declarations.contract.Contract object at 0x296aebc10>, <slither.core.declarations.contract.Contract object at 0x296ae8d00>, <slither.core.declarations.contract.Contract object at 0x296c644c0>, <slither.core.declarations.contract.Contract object at 0x296c64520>, <slither.core.declarations.contract.Contract object at 0x296c645b0>, <slither.core.declarations.contract.Contract object at 0x296c64640>, <slither.core.declarations.contract.Contract object at 0x296c646d0>]\n"
      ]
     }
    ],
@@ -559,6 +559,73 @@
     "for s in p_tether:\n",
     "  print(s.contracts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tSafeMath\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "\tOwnable\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tERC20Basic\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tERC20\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tBasicToken\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tStandardToken\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tPausable\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tBlackList\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tUpgradedStandardToken\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "\tTetherToken\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for contract in s.contracts:\n",
+    "  print('\\t' + contract.name)\n",
+    "  print(contract.is_library)\n",
+    "  print(contract.is_interface)\n",
+    "  print(contract.is_upgradeable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
